@@ -81,7 +81,7 @@ echo "Killing All Carbon Servers..."
 killall java
 
 echo "Enabling GC Logs..."
-export JAVA_OPTS="-XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:${carbon_home}/repository/logs/gc.log"
+export JAVA_OPTS="-XX:+PrintGC -XX:+PrintGCDetails -Xloggc:${carbon_home}/repository/logs/gc.log"
 JAVA_OPTS+=" -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath="${carbon_home}/repository/logs/heap-dump.hprof""
 export JVM_MEM_OPTS="-Xms${heap_size} -Xmx${heap_size}"
 echo "JAVA_OPTS: $JAVA_OPTS"
